--- a/server/package.json
+++ b/server/package.json
@@ -69,6 +69,9 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
+  "resolutions": {
+    "react-native-reanimated": "3.12.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
