--- a/front/android/app/src/main/AndroidManifest.xml
+++ b/front/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:usesCleartextTraffic="true">
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDzAiwPf1SyJ9WJ6aVZ1Z1TSs4c8Z-rflM"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
