--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-maps": "^1.15.6",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1"
